# controlador-fuzzy-automotivo

./: README.md  SBC_Fuzzy_Compra_Automotiva.ipynb  fuzzy_compra.py  pyproject.toml
