[project]
name = "controlador-fuzzy-automotivo"
version = "0.1.0"
description = "Mini-Projeto 2 - Controlador fuzzy Mamdani (scikit-fuzzy) para recomendacao de compra automotiva"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scikit-fuzzy>=0.5.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
]

[tool.uv]
package = false
